--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet/less" type="text/css" href="base.less">
     <!-- theme -->
     <link rel="stylesheet/less" type="text/css" href="theme.less">
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.3/less.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.3/less.min.js'></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
     <script type="text/x-handlebars-template" id="template">
       <div class='align-vert'>
