--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>CSS Designer</title>
     <meta charset="UTF-8">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet/less" type="text/css" href="base.less">
-    <!-- theme -->
+    <!-- <link rel="stylesheet/less" type="text/css" href="base.less">
     <link rel="stylesheet/less" type="text/css" href="theme.less">
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.3/less.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.3/less.min.js'></script> -->
+    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="theme.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
     <script type="text/x-handlebars-template" id="template">
       <div class='align-vert'>
