--- a/amp.html
+++ b/amp.html
@@ -137,7 +137,7 @@ body{margin:0;padding:0}p{margin:0;padding:0}h2{text-align:center}h3{margin:0}hr
         <div class='responsive-align'>
           <div class='card'>
             <div class='virtical-center'>
-              <amp-img src="img/free.png" width='50' height='64'></amp-img>
+              <div class='bg-free'></div>
               <span class='plan'>Free</span>
             </div>
             <table>
@@ -151,7 +151,7 @@ body{margin:0;padding:0}p{margin:0;padding:0}h2{text-align:center}h3{margin:0}hr
           </div>
           <div class='card'>
             <div class='virtical-center'>
-              <amp-img src="img/business.png" width='50' height='64'></amp-img>
+              <div class='bg-business'></div>
               <span class='plan'>Business</span>
             </div>
             <table>
@@ -165,7 +165,7 @@ body{margin:0;padding:0}p{margin:0;padding:0}h2{text-align:center}h3{margin:0}hr
           </div>
           <div class='card'>
             <div class='virtical-center'>
-              <amp-img src="img/premium.png" width='50' height='64'></amp-img>
+              <div class='bg-premium'></div>
               <span class='plan'>Premium</span>
             </div>
             <table>
