--- a/index.html
+++ b/index.html
@@ -178,16 +178,16 @@
         <div class='responsive-align company-wrap'>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.8308288691524!2d139.76485755012288!3d35.68116728009713!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188bfbd89f700b%3A0x277c49ba34ed38!2z5p2x5Lqs6aeF!5e0!3m2!1sja!2sjp!4v1514698136265" width="300" height="225" frameborder="0" allowfullscreen></iframe>
           <div class='align-vert company-info'>
-            <div class='campany-item'>
+            <div class='company-item'>
               <h3>会社名</h3>
               <p>株式会社CSS Design</p>
             </div>
-            <div class='campany-item'>
+            <div class='company-item'>
               <h3>所在地</h3>
               <p>〒100-0005</p>
               <p>東京都千代田区丸の内１丁目９</p>
             </div>
-            <div class='campany-item'>
+            <div class='company-item'>
               <h3>お問い合わせ</h3>
               <p>hogehoge@gmail.com</p>
             </div>
